--- a/styles.css
+++ b/styles.css
@@ -25,16 +25,19 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+.voldemort {
+  height: 200px;
+}
 .deathEater{
-  border:10px solid red;
+  border:5px solid green;
   border-radius:10px;
   position:absolute;
+}
+.harry {
+  height: 75px;
 }
 .phoenix{
-  border:10px solid red;
+  border:5px solid red;
   border-radius:10px;
   position:absolute;
-}
-img {
-  height: 200px;
 }
