Randomizes image selections for dancers

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
-.voldemort {
+.death {
   height: 200px;
 }
 .deathEater{
@@ -33,7 +33,7 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
-.harry {
+.order {
   height: 75px;
 }
 .phoenix{
