--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body, a:link, a:visited, a:active{
   -webkit-animation-iteration-count: infinite;
 }
 .death{
-  border:5px solid green;
+  border:5px solid #0F0;
   border-radius:10px;
   height: 200px;
   transition: height 1s;
